# pysho

./: README.md  pyproject.toml
src/py-jisho/: jisho.py
src/py_jisho/: jisho.py
tests/: test.py
