[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-jisho"
version = "0.0.1"
authors = [
  { name="Logan Lupeamanu", email="LupeamanuLogan@gmail.com" },
]
description = "A small API wrapper to interface with the Jisho.com API to lookup Japanese words."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Lupeamanu/pysho"
Issues = "https://github.com/Lupeamanu/pysho/issues"